Fix long word subject overflow

--- a/app/internal_packages/message-list/styles/message-list.less
+++ b/app/internal_packages/message-list/styles/message-list.less
@@ -219,6 +219,7 @@ body.platform-win32 {
     font-size: @font-size-large;
     color: @text-color;
     margin-right: @spacing-standard;
+    overflow-wrap: anywhere;
   }
   .message-icons-wrap {
     flex-shrink: 0;
